homepage hero mobile - video chapter overflow fix

--- a/src/components/pages/home/Hero/Hero.css
+++ b/src/components/pages/home/Hero/Hero.css
@@ -103,6 +103,12 @@
   /* color: rgba(253, 87, 80, 1); */
 }
 
+@media screen and (max-width: 415px) {
+  .hero-component .hero-video-chapter {
+    padding: 30px 12px;
+  }
+}
+
 .hero-component .hero-video-chapter:hover {
   cursor: pointer;
 }
